# lidar-panoptic-segmentation

./: .gitattributes  .gitignore  README.md  README_Model_Improvements.md  cluster_config_guidance.md  config.databricks.yaml  config.yaml  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  post-create.sh
data/sample/: config_sample.yaml
databricks/: config.yaml  config_spformer.yaml  databricks.yml
databricks/resources/: inference_job.yml  inference_spformer_job.yml  training_job.yml  training_spformer_job.yml  validation_job.yml  validation_spformer_job.yml
databricks/src/: common.py  run_inference.py  run_training.py  run_validation.py
lidar_panoptic_segmentation/: __init__.py  config.py  config_schema.py  dataset.py  evaluation.py  infer.py  logging_utils.py  mask_transformer.py  model.py  native_inference.py  postprocess.py  pretrained_inference.py  segment_trees.py  train.py  utils.py
notebooks/: DownloadData_Databricks.py  LidarPanopticSegmentation_Demo.ipynb  TreeSegmentation_Databricks.py  run_inference_databricks.py  validation_databricks.py
scripts/: create_labeled_sample.py  create_sample_data.py  download_data.py  generate_validation_shapefiles.py  install_minkowski.sh  install_minkowski_databricks.sh  test_inference_docker.sh  validate_model.py
tests/: __init__.py  test_config.py  test_infer.py  test_mask_transformer.py  test_postprocess.py
